# cardio

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  release-please-config.json
.github/workflows/: build.yml  ci.yml  release-please.yml
src/: App.tsx  constants.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  Info.ios.plist  build.rs  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json
src-tauri/android/: patch-manifest.sh
src-tauri/android/java/space/checksum/cardio/: ForegroundService.kt
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  foreground_service.rs  lib.rs  main.rs  state.rs
src-tauri/src/ble/: device.rs  gatt.rs  mod.rs
src-tauri/src/ble/devices/: mod.rs
src-tauri/src/server/: mod.rs  openapi.rs  routes.rs  ws.rs
src-tauri/src/server/overlays/: chart.rs  mod.rs  ring.rs  standard.rs
src/components/: DeviceList.tsx  HeartRateDisplay.tsx  Settings.tsx  StatusBar.tsx  UpdateBanner.tsx
src/hooks/: useTauri.ts  useUpdater.ts
